modules/kubernetes/eks-hello-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-two
  template:
    metadata:
      labels:
        app: aks-helloworld-two
    spec:
      containers:
      - name: aks-helloworld-two
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-two
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-two
---
#akshmlfcamara.brazilsouth.cloudapp.azure.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-two-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - abd72cd8d8fd949d190f6c15f7733267-468285573.us-east-1.elb.amazonaws.com
    secretName: tls-secret
  rules:
  - host: abd72cd8d8fd949d190f6c15f7733267-468285573.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /hello-world-two(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
