modules/kubernetes/ingress-app2.yaml
#akshmlfcamara.brazilsouth.cloudapp.azure.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-two-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - hostname
    secretName: tls-secret
  rules:
  - host: hostname
    http:
      paths:
      - path: /hello-world-two(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
