modules/kubernetes/route-ingress-app1.yml
#akshmlfcamara.brazilsouth.cloudapp.azure.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - abd72cd8d8fd949d190f6c15f7733267-468285573.us-east-1.elb.amazonaws.com
    secretName: tls-secret
  rules:
  - host: abd72cd8d8fd949d190f6c15f7733267-468285573.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /hello-world-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
